--- a/app/src/main/res/layout/activity_moviedetail.xml
+++ b/app/src/main/res/layout/activity_moviedetail.xml
@@ -281,7 +281,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                mocloud:indicatorColor="@color/blur_bg"
+                mocloud:indicatorColor="#727374"
                 mocloud:indicatorName="BallPulseIndicator" />
 
             <LinearLayout
@@ -302,7 +302,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                mocloud:indicatorColor="@color/blur_bg"
+                mocloud:indicatorColor="#727374"
                 mocloud:indicatorName="BallPulseIndicator" />
 
             <LinearLayout
