--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -34,12 +34,19 @@
         </LinearLayout>
 
         <com.wang.avi.AVLoadingIndicatorView
-            android:visibility="gone"
             android:id="@+id/loading_token_request"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
+            android:visibility="gone"
             app:indicatorColor="@color/loading"
             app:indicatorName="LineScaleIndicator" />
+
+        <TextView
+            android:id="@+id/tv_info_show"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="vertical" />
     </RelativeLayout>
 </LinearLayout>
