--- a/app/src/main/res/layout/activity_moviedetail.xml
+++ b/app/src/main/res/layout/activity_moviedetail.xml
@@ -265,7 +265,8 @@
                 android:id="@+id/show_youtube"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Trailer" />
+                android:text="Trailer"
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/tv_tagline_title"
