--- a/app/src/main/res/layout/activity_moviedetail.xml
+++ b/app/src/main/res/layout/activity_moviedetail.xml
@@ -183,8 +183,7 @@
                         android:id="@+id/iv_tomato_popcorn_state"
                         android:layout_width="wrap_content"
                         android:layout_height="0dp"
-                        android:layout_weight="6"
-                        android:src="@drawable/popcorn_good" />
+                        android:layout_weight="6" />
 
                     <TextView
                         android:id="@+id/tv_tomato_rating"
