--- a/app/src/main/res/layout/activity_moviedetail.xml
+++ b/app/src/main/res/layout/activity_moviedetail.xml
@@ -118,10 +118,12 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/ll_sync"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="3dp"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:visibility="gone">
 
                 <TextView
                     android:layout_width="0dp"
@@ -168,8 +170,7 @@
                 android:background="@drawable/textview_border"
                 android:gravity="center"
                 android:orientation="horizontal"
-                android:padding="10dp"
-                android:visibility="gone">
+                android:padding="10dp">
 
                 <LinearLayout
                     android:id="@+id/ll_tomato_rating"
