--- a/app/src/main/res/layout/activity_moviedetail.xml
+++ b/app/src/main/res/layout/activity_moviedetail.xml
@@ -123,8 +123,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="3dp"
-                android:orientation="horizontal">
-                <!--android:visibility="gone"-->
+                android:orientation="horizontal"
+                android:visibility="gone">
+
                 <mehdi.sakout.fancybuttons.FancyButton
                     android:id="@+id/fb_watched"
                     android:layout_width="0dp"
