--- a/app/src/main/res/layout/comment_item.xml
+++ b/app/src/main/res/layout/comment_item.xml
@@ -121,10 +121,12 @@
 
             </LinearLayout>
 
-            <RelativeLayout
+            <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="3">
+                android:layout_weight="3"
+                android:gravity="right"
+                android:orientation="horizontal">
 
                 <ImageView
                     android:id="@+id/iv_comment_likes"
@@ -132,7 +134,6 @@
                     android:layout_height="20dp"
                     android:layout_marginRight="5dp"
                     android:layout_marginTop="6dp"
-                    android:layout_toLeftOf="@+id/tv_comment_likes"
                     android:src="@drawable/appreciate" />
 
                 <TextView
@@ -141,7 +142,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginRight="10dp"
                     android:layout_marginTop="6dp"
-                    android:layout_toLeftOf="@+id/iv_replies"
                     tools:text="137" />
 
                 <ImageView
@@ -150,18 +150,16 @@
                     android:layout_height="20dp"
                     android:layout_marginRight="5dp"
                     android:layout_marginTop="6dp"
-                    android:layout_toLeftOf="@+id/tv_comments_replies"
                     android:src="@drawable/reply" />
 
                 <TextView
                     android:id="@+id/tv_comments_replies"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
                     android:layout_marginRight="6dp"
                     android:layout_marginTop="6dp"
                     tools:text="2" />
-            </RelativeLayout>
+            </LinearLayout>
         </LinearLayout>
 
         <TextView
