--- a/app/src/main/res/layout/comment_item.xml
+++ b/app/src/main/res/layout/comment_item.xml
@@ -128,38 +128,53 @@
                 android:gravity="right"
                 android:orientation="horizontal">
 
-                <ImageView
-                    android:id="@+id/iv_comment_likes"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:layout_marginRight="5dp"
-                    android:layout_marginTop="6dp"
-                    android:src="@drawable/appreciate" />
-
-                <TextView
-                    android:id="@+id/tv_comment_likes"
+                <LinearLayout
+                    android:id="@+id/ll_comment_likes"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginTop="6dp"
-                    tools:text="137" />
+                    android:orientation="horizontal">
 
-                <ImageView
-                    android:id="@+id/iv_replies"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:layout_marginRight="5dp"
-                    android:layout_marginTop="6dp"
-                    android:src="@drawable/reply" />
+                    <ImageView
+                        android:id="@+id/iv_comment_likes"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_marginRight="5dp"
+                        android:layout_marginTop="6dp"
+                        android:src="@drawable/appreciate" />
 
-                <TextView
-                    android:id="@+id/tv_comments_replies"
+                    <TextView
+                        android:id="@+id/tv_comment_likes"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="10dp"
+                        android:layout_marginTop="6dp"
+                        tools:text="137" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/ll_comment_replies"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="6dp"
-                    android:layout_marginTop="6dp"
-                    tools:text="2" />
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/iv_replies"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_marginRight="5dp"
+                        android:layout_marginTop="6dp"
+                        android:src="@drawable/reply" />
+
+                    <TextView
+                        android:id="@+id/tv_comments_replies"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="6dp"
+                        android:layout_marginTop="6dp"
+                        tools:text="2" />
+                </LinearLayout>
             </LinearLayout>
+
         </LinearLayout>
 
         <TextView
