change comment item's replies width

--- a/app/src/main/res/layout/comment_item.xml
+++ b/app/src/main/res/layout/comment_item.xml
@@ -130,7 +130,8 @@
 
                 <LinearLayout
                     android:id="@+id/ll_comment_likes"
-                    android:layout_width="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
@@ -146,14 +147,14 @@
                         android:id="@+id/tv_comment_likes"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginRight="10dp"
                         android:layout_marginTop="6dp"
                         tools:text="137" />
                 </LinearLayout>
 
                 <LinearLayout
                     android:id="@+id/ll_comment_replies"
-                    android:layout_width="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
@@ -169,9 +170,8 @@
                         android:id="@+id/tv_comments_replies"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginRight="6dp"
                         android:layout_marginTop="6dp"
-                        tools:text="2" />
+                        tools:text="166" />
                 </LinearLayout>
             </LinearLayout>
 
