--- a/app/src/main/res/layout/comment_item.xml
+++ b/app/src/main/res/layout/comment_item.xml
@@ -126,36 +126,19 @@
                 android:layout_height="match_parent"
                 android:layout_weight="3"
                 android:gravity="right"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:paddingRight="1dp">
+                <!--android:gravity="right"-->
 
-                <LinearLayout
-                    android:id="@+id/ll_comment_likes"
-                    android:layout_weight="1"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:id="@+id/iv_comment_likes"
-                        android:layout_width="20dp"
-                        android:layout_height="20dp"
-                        android:layout_marginRight="5dp"
-                        android:layout_marginTop="6dp"
-                        android:src="@drawable/appreciate" />
-
-                    <TextView
-                        android:id="@+id/tv_comment_likes"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="6dp"
-                        tools:text="137" />
-                </LinearLayout>
 
                 <LinearLayout
                     android:id="@+id/ll_comment_replies"
-                    android:layout_weight="1"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginLeft="5dp"
+                    android:layout_weight="1"
+                    android:gravity="center_horizontal"
                     android:orientation="horizontal">
 
                     <ImageView
@@ -163,15 +146,40 @@
                         android:layout_width="20dp"
                         android:layout_height="20dp"
                         android:layout_marginRight="5dp"
-                        android:layout_marginTop="6dp"
+                        android:layout_marginTop="5dp"
                         android:src="@drawable/reply" />
 
                     <TextView
                         android:id="@+id/tv_comments_replies"
-                        android:layout_width="wrap_content"
+                        android:layout_width="25dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="6dp"
+                        android:layout_marginTop="5dp"
                         tools:text="166" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/ll_comment_likes"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_toLeftOf="@+id/ll_comment_replies"
+                    android:layout_weight="1"
+                    android:gravity="center_horizontal"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/iv_comment_likes"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_marginRight="5dp"
+                        android:layout_marginTop="5dp"
+                        android:src="@drawable/appreciate" />
+
+                    <TextView
+                        android:id="@+id/tv_comment_likes"
+                        android:layout_width="25dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        tools:text="137" />
                 </LinearLayout>
             </LinearLayout>
 
