--- a/app/src/main/res/layout/activity_moviedetail.xml
+++ b/app/src/main/res/layout/activity_moviedetail.xml
@@ -13,10 +13,10 @@
     <ScrollView
         android:id="@+id/sv_movie_detail"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="3dp">
+        android:layout_height="match_parent">
 
         <LinearLayout
+            android:padding="3dp"
             android:id="@+id/ll_movie_detail"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
