--- a/app/src/main/res/layout/activity_moviedetail.xml
+++ b/app/src/main/res/layout/activity_moviedetail.xml
@@ -16,11 +16,11 @@
         android:layout_height="match_parent">
 
         <LinearLayout
-            android:padding="3dp"
             android:id="@+id/ll_movie_detail"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="3dp">
 
             <LinearLayout
                 android:id="@+id/ll_movie_header"
@@ -235,7 +235,7 @@
                     android:visibility="gone">
 
                     <ImageView
-                        android:id="@+id/iv_tomato_popcorn_state"
+                        android:id="@+id/iv_tomato_state"
                         android:layout_width="wrap_content"
                         android:layout_height="0dp"
                         android:layout_weight="6" />
@@ -247,11 +247,11 @@
                         android:layout_weight="2"
                         tools:text="8.3" />
 
-                    <TextView
-                        android:id="@+id/tv_tomato_rating_count"
+                    <View
                         android:layout_width="wrap_content"
                         android:layout_height="0dp"
                         android:layout_weight="2"
+                        android:visibility="invisible"
                         tools:text="21103votes" />
                 </LinearLayout>
 
@@ -264,6 +264,7 @@
                     android:orientation="vertical">
 
                     <ImageView
+                        android:id="@+id/iv_trakt_rating"
                         android:layout_width="wrap_content"
                         android:layout_height="0dp"
                         android:layout_weight="6"
@@ -313,6 +314,42 @@
                         android:layout_weight="2"
                         tools:text="21103votes" />
                 </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/ll_meta_score"
+                    android:layout_width="0dp"
+                    android:layout_height="80dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    android:visibility="gone">
+
+                    <TextView
+                        android:id="@+id/tv_meta_score"
+                        android:layout_width="wrap_content"
+                        android:layout_height="0dp"
+                        android:layout_weight="6"
+                        android:gravity="center"
+                        android:textColor="@android:color/white"
+                        android:textSize="20sp"
+                        android:textStyle="bold"
+                        tools:text="50" />
+
+                    <View
+                        android:layout_width="wrap_content"
+                        android:layout_height="0dp"
+                        android:layout_weight="2"
+                        android:visibility="invisible"
+                        tools:text="21103votes" />
+
+                    <View
+                        android:layout_width="wrap_content"
+                        android:layout_height="0dp"
+                        android:layout_weight="2"
+                        android:visibility="invisible"
+                        tools:text="21103votes" />
+                </LinearLayout>
+
             </LinearLayout>
 
             <Button
@@ -324,18 +361,18 @@
 
 
             <TextView
-                android:visibility="gone"
                 android:id="@+id/tv_tagline_title"
                 style="@style/detail_title"
-                android:text="@string/tagline" />
+                android:text="@string/tagline"
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/tv_tagline"
                 style="@style/detail_content"
-                android:padding="10dp"
-                android:layout_height="wrap_content"
                 android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:gravity="center"
+                android:padding="10dp"
                 android:textSize="17sp"
                 android:textStyle="italic"
                 tools:text="Kevin has 23 distinct personalities. The 24th is about to be unleashed." />
