--- a/app/src/main/res/layout/item_movie_trending.xml
+++ b/app/src/main/res/layout/item_movie_trending.xml
@@ -15,6 +15,18 @@
         tools:src="@drawable/default_movie_poster" />
 
     <TextView
+        android:id="@+id/tv_people_watching"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:background="@drawable/poster_tag_round_corner_bg"
+        android:padding="2dp"
+        android:textColor="@color/poster_tag_text_white"
+        android:textStyle="bold"
+        tools:text="54 watching" />
+
+    <TextView
         android:id="@+id/tv_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
